# SonarSimpleCppTest

./: .gitignore  CMakeLists.txt  fetch_sonar_scanner.sh  generate_coverage_reports.sh  sonar-project.properties  sonar_analyze_with_coverage.sh
.github/workflows/: build.yml
lib/: CMakeLists.txt
lib/include/: clamped_add.h
main/: CMakeLists.txt  main.cpp  someheader.h
tests/: CMakeLists.txt  test.cpp
